@@ -232,9 +232,9 @@ class PaymentPaypal extends IsotopePayment
 
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-document.addEvent( \'domready\' , function() {
-	$(\'payment_form\').submit();
-	});
+window.addEvent( \'domready\' , function() {
+  $(\'payment_form\').submit();
+});
 //--><!]]>
 </script>';
 	}
